# OpenEvolve

./: .gitignore  README.md  pyproject.toml
examples/: sort_algorithm.py  string_match.py
openevolve/: __init__.py  evaluator.py  evolve.py  llm.py  models.py  population.py  sandbox.py
tests/: test_evaluator.py  test_evolve.py  test_population.py  test_sandbox.py
